fix header styles on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ a {
 }
 
 header {
-  padding: 1rem 1rem;
+  padding: 1rem 0;
   background-color: #00E3A0;
   font-size: 1.5em;
   font-weight: bold;
